Code Quaility + Hardening
Signed-off-by: Mark Hoffmann <m.hoffmann@datainmotion.com>